tests/paczka1/fuzzy1/27179747.err
Error in line 9: Mrai0yyycvj A764 93,55
Error in line 8: Mrai0yyycvj A810 93,3
Error in line 12: Mrai0yyycvj A764 220,7
Error in line 20: A764 A764 22,2
Error in line 15: iSQlUOGVYBR A764 10,4
Error in line 23: iSQlUOGVYBR A252 48,1
Error in line 22: ejR A764 9,1
Error in line 17: Mrai0yyycvj S232 10,1
Error in line 25: ejR S232 87,7
